# claude-token-monitor

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
docs/: index.html
scripts/: gen_icon.py  gen_tray_icon.py
src/: index.html  main.js  render.js  styles.css  theme.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  token_monitor.rs
